--- a/package.json
+++ b/package.json
@@ -18,5 +18,13 @@
     "socketio": "^1.0.0",
     "tls": "^0.0.1",
     "webpack": "^2.5.1"
+  },
+  "devDependencies": {
+    "aframe-broadcast-component": "^0.1.0",
+    "bufferutil": "^3.0.0",
+    "jsdom": "^10.1.0",
+    "utf-8-validate": "^3.0.1",
+    "util": "^0.10.3",
+    "xmlhttprequest": "^1.8.0"
   }
 }
