--- a/package.json
+++ b/package.json
@@ -1,35 +1,42 @@
 {
-  "name": "theatrevr",
-  "version": "1.0.0",
-  "description": "Experiment with VR",
-  "main": "index.js",
-  "repository": "https://github.com/JeromeDevillers/theatrevr.git",
-  "author": "Devillers Jerome",
-  "license": "MIT",
-  "scripts": {
-    "dev": "browserify src/main.js -o dist/bundle.js",
-    "start": "node index.js"
-  },
-  "dependencies": {
-    "aframe": "^0.5.0",
-    "express": "^4.15.2",
-    "fs-": "^1.0.0",
-    "http": "^0.0.0",
-    "jquery": "^3.2.1",
-    "json-loader": "^0.5.4",
-    "net": "^1.0.2",
-    "require": "^2.4.20",
-    "socketio": "^1.0.0",
-    "tls": "^0.0.1",
-    "webpack": "^2.5.1"
-  },
-  "devDependencies": {
-    "aframe-broadcast-component": "^0.1.0",
-    "bufferutil": "^3.0.0",
-    "jsdom": "^10.1.0",
-    "node": "0.0.0",
-    "utf-8-validate": "^3.0.1",
-    "util": "^0.10.3",
-    "xmlhttprequest": "^1.8.0"
-  }
+    "name": "theatrevr",
+    "version": "0.0.1",
+    "description": "Experiment with VR",
+    "main": "index.js",
+    "keywords": ["VR", "Websocket", "AR", "Server"],
+    "repository": "https://github.com/JeromeDevillers/theatrevr.git",
+    "author": "Devillers Jerome",
+    "license": "MIT",
+    "scripts": {
+        "dev": "browserify src/main.js -o dist/bundle.js",
+        "start": "node index.js"
+    },
+    "dependencies": {
+        "aframe": "^0.5.0",
+        "express": "^4.15.2",
+        "extract-text-webpack-plugin": "^2.1.0",
+        "fs-": "^1.0.0",
+        "http": "^0.0.0",
+        "jquery": "^3.2.1",
+        "json-loader": "^0.5.4",
+        "net": "^1.0.2",
+        "require": "^2.4.20",
+        "semver": "^5.4.1",
+        "socketio": "^1.0.0",
+        "tls": "^0.0.1",
+        "webpack": "^2.5.1",
+        "webpack-node-externals": "^1.6.0"
+    },
+    "devDependencies": {
+        "aframe-broadcast-component": "^0.1.0",
+        "bufferutil": "^3.0.0",
+        "jsdom": "^10.1.0",
+        "node": "0.0.0",
+        "node-sass": "^4.5.3",
+        "sass-loader": "^6.0.5",
+        "utf-8-validate": "^3.0.1",
+        "util": "^0.10.3",
+        "webpack": "^2.5.1",
+        "xmlhttprequest": "^1.8.0"
+    }
 }
